[gd_scene load_steps=6 format=3 uid="uid://bp4upclobui8l"]

[ext_resource type="Script" uid="uid://bdupaiut4r6sl" path="res://scenes/decor/scr_tree.gd" id="1_ntvbr"]
[ext_resource type="Texture2D" uid="uid://c7n8id1ah7sau" path="res://sprites/world/nature/spr_trees.png" id="2_mh3gg"]
[ext_resource type="PackedScene" uid="uid://byxv0c510ftyr" path="res://scenes/tech/scn_behind_area.tscn" id="3_s4k00"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o55p1"]
size = Vector2(6, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_38uvm"]
size = Vector2(16, 88)

[node name="Tree" type="Node2D" groups=["trees"]]
script = ExtResource("1_ntvbr")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
modulate = Color(1, 1, 1, 0.0823529)
position = Vector2(1.43051e-06, -56)
scale = Vector2(2.4, 6.4)

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(0, -56)
texture = ExtResource("2_mh3gg")
region_enabled = true
region_rect = Rect2(16, 0, 48, 128)

[node name="Face" type="Sprite2D" parent="Sprite"]
visible = false
position = Vector2(-2, 36)
texture = ExtResource("2_mh3gg")
centered = false
region_enabled = true
region_rect = Rect2(3, 64, 5, 9)

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
modulate = Color(1, 1, 1, 0.396078)
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_o55p1")
debug_color = Color(0.294118, 1, 1, 0.45098)

[node name="BehindArea" parent="." node_paths=PackedStringArray("affected_node") instance=ExtResource("3_s4k00")]
affected_node = NodePath("../Sprite")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BehindArea"]
position = Vector2(0, -40)
shape = SubResource("RectangleShape2D_38uvm")

[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="Sprite" method="show"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="Sprite" method="hide"]
